--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -49,4 +49,32 @@ body{
     border: 2px solid rgb(0, 80, 120);
     color: white;
     font-weight: bolder;
+    transform: rotate(-15deg);
+}
+
+@media (width < 575.98px){
+    .bolhas{
+        transform: rotate(90deg);
+    }
+}
+.produtos{
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+.card{
+    background-color: rgb(0, 60, 120);
+    color: white;
+    border: 12px solid rgb(0, 80, 120);
+    box-shadow: 5px 5px 20px black;
+    height: 100%;
+}
+.logo{
+    margin-top: 70px;
+    border: none;
+}
+.card-body{
+    gap: 25px;
+}
+.card-group{
+    margin: 60px 0;
 }
