--- a/src/CSS/contato.css
+++ b/src/CSS/contato.css
@@ -1,5 +1,5 @@
 body {
-  background: url(../assets/image-contato.png) no-repeat center center fixed;
+  background: url(../assets/assetsContato/image-contato.png) no-repeat center center fixed;
   background-size: cover;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
