--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -1,20 +1,20 @@
 .carousel-item img{
     height: 700px;
-    border: 5px solid rgb(0, 80, 120);
+    border: 5px solid rgba(255, 255, 255, 0);
     justify-self: center;
     width: 80%;
-    background-color: rgb(0, 120, 220);
+    background-color: #2b5148;
 }
 
 #carrossel-holder{
     margin-top: 50px;
-    border: 5px solid rgb(0, 80, 120);
-    background-color: rgb(0, 60, 120);
+    border: 5px solid #1e3932;
+    background-color: #1e3932;
     padding: 15px;
 }
 
 body{
-    background-color: rgb(80,120,220);
+    background-color: #f9f9f9;
 }
 .carousel-indicators .indicador{
     width: 20px;
@@ -29,16 +29,21 @@ body{
     font-size: 20px;
     font-weight: bolder;
 }
+
 .texto-legenda{
-    background-color: rgba(0, 0, 0, 0.4);
+    background-color:   #f8f9fa;
     text-align: center;
 }
 .texto-legenda p{
-    font-size: 20px;
+    color:rgb(128, 85, 37);
+    font-size: 14px;
+    font-weight: bold;
 }
 .texto-legenda h2{
-    font-size: 40px;
-    text-shadow: 2px 2px black;
+    color:rgb(83, 55, 22);
+    font-weight: bold;
+    font-size: 1.5rem;
+    text-transform: uppercase
 }
 .desconto{
     position: relative;
@@ -46,7 +51,6 @@ body{
     top: 60px;
     width: 100px;
     height: 100px;
-    border: 2px solid rgb(0, 80, 120);
     color: white;
     font-weight: bolder;
     transform: rotate(-15deg);
@@ -62,9 +66,9 @@ body{
     margin-bottom: 50px;
 }
 .card{
-    background-color: rgb(0, 60, 120);
+    background-color: #33433d;
     color: white;
-    border: 12px solid rgb(0, 80, 120);
+    border: 12px solid  #2b5148;
     box-shadow: 5px 5px 20px black;
     height: 100%;
 }
